// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input field tests input field snapshot 1`] = `
<div
  className="border w-full border-alt-2 mb-4 form-input"
>
  <div
    className="px-4 relative"
  >
    <Field
      className="w-full py-2 form-input__field focus:outline-none relative z-10 bg-transparent font-medium"
      id="test"
      name="test"
      type="text"
    />
    <label
      className="text-secondary font-light tracking-normal absolute py-2 px-4 left-0 transition-all transition-ease z-0 form-input__label"
      htmlFor="test"
    >
      test
    </label>
  </div>
</div>
`;

exports[`Input field tests input field with icon snapshot 1`] = `
<div
  className="flex border w-full border-alt-2 mb-4 form-input"
>
  <div
    className="pl-4 flex items-center"
  >
    test
  </div>
  <div
    className="flex-1 -ml-2 px-4 relative"
  >
    <Field
      className="w-full py-2 form-input__field focus:outline-none relative z-10 bg-transparent font-medium"
      id="test"
      name="test"
      type="text"
    />
    <label
      className="text-secondary font-light tracking-normal absolute py-2 px-4 left-0 transition-all transition-ease z-0 form-input__label"
      htmlFor="test"
    >
      test
    </label>
  </div>
</div>
`;
